--- a/src/main/resources/core/application-ipng.yml
+++ b/src/main/resources/core/application-ipng.yml
@@ -1,5 +1,5 @@
 #
-# iparapheur
+# iparapheur Core
 # Copyright (C) 2019-2023 Libriciel-SCOP
 #
 # This program is free software: you can redistribute it and/or modify
