--- a/.env.dist
+++ b/.env.dist
@@ -23,8 +23,8 @@ BACKUPS_ROOT_DIR=/data/iparapheur_backups
 
 APPLICATION_PROTOCOL=https
 APPLICATION_HOST=iparapheur.dom.local
-CERTIFICATE_FULLCHAIN_PATH=./data/nginx/ssl/fullchain.pem
-CERTIFICATE_PRIVKEY_PATH=./data/nginx/ssl/privkey.pem
+CERTIFICATE_FULLCHAIN_PATH=/data/iparapheur/nginx/ssl/fullchain.pem
+CERTIFICATE_PRIVKEY_PATH=/data/iparapheur/nginx/ssl/privkey.pem
 
 # The SMTP values will be set and updated on every Core restart.
 # Yet, they only will be applied on Keycloak initialisation, and never re-applied after.
@@ -57,7 +57,7 @@ KEYCLOAK_CLIENT_ID=ipcore-api
 KEYCLOAK_CLIENT_SECRET=<random-uuid>
 KEYCLOAK_WEB_CLIENT_ID=ipcore-web
 INITIAL_KEYCLOAK_ADMIN_USER=admin
-INITIAL_KEYCLOAK_ADMIN_PASSWORD=admin
+INITIAL_KEYCLOAK_ADMIN_PASSWORD=<random-12-chars-at-least>
 
 KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
@@ -66,7 +66,7 @@ KEYCLOAK_RESTADMIN_PASSWORD=admin
 KEYCLOAK_SOAPUI_PASSWORD=admin
 
 INITIAL_IPARAPHEUR_ADMIN_USER=user
-INITIAL_IPARAPHEUR_ADMIN_PASSWORD=password
+INITIAL_IPARAPHEUR_ADMIN_PASSWORD=<random-12-chars-at-least>
 
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
