--- a/.env.dist
+++ b/.env.dist
@@ -62,8 +62,8 @@ INITIAL_KEYCLOAK_ADMIN_PASSWORD=<random-12-chars-at-least>
 KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
-KEYCLOAK_RESTADMIN_PASSWORD=admin
-KEYCLOAK_SOAPUI_PASSWORD=admin
+KEYCLOAK_RESTADMIN_PASSWORD=<random-12-chars-at-least>
+KEYCLOAK_SOAPUI_PASSWORD=<random-12-chars-at-least>
 
 INITIAL_IPARAPHEUR_ADMIN_USER=user
 INITIAL_IPARAPHEUR_ADMIN_PASSWORD=<random-12-chars-at-least>
