--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -78,7 +78,7 @@ services:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/keycloak:develop
 
   nginx:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/nginx:develop
+    image: registry.libriciel.fr:443/public/signature/ip-nginx:develop
 
   postgres:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-postgresql:develop
