update tests with new route

--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -29,7 +29,7 @@
 services:
 
   core:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-core:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-core:provisioning-desk-lib
     volumes:
       - ./application-core.yml:/application.yml
     ports:
@@ -37,7 +37,7 @@ services:
 
 
   web:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-web:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-web:provisioning-desk-lib
     environment:
       - VERSION=5.0.10-develop
 
