--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -284,9 +284,9 @@ services:
         condition: service_healthy
       activemq:
         condition: service_started
-      transform-custom-engine:
-        condition: service_healthy
       transform-core-aio:
+        condition: service_healthy
+      libriciel-transform-engine:
         condition: service_healthy
     volumes:
       - ${DATA_ROOT_DIR}/alfresco:/usr/local/tomcat/alf_data
@@ -300,10 +300,9 @@ services:
         limits:
           memory: 1280M
 
-  transform-custom-engine:
-    image: test-ip-custom-engine:latest
+  libriciel-transform-engine:
+    image: libriciel-transform-engine:latest
     environment:
-      JAVA_OPTS: " -Xms256m -Xmx1256m"
       ACTIVEMQ_URL: "nio://activemq:61616"
       ACTIVEMQ_USER: "admin"
       ACTIVEMQ_PASSWORD: "admin"
