Use gitlab images in dev mode

--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -96,11 +96,13 @@ services:
 
 
   alfresco:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco:develop
     ports:
       - "9009:8080"
 
 
   transform-core-aio:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
     ports:
       - "8090:8090"
 
