--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -105,7 +105,7 @@ services:
 
 
   alfresco:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco:add-custom-engine-image
     memswap_limit: 1536M
     ports:
       - "9009:8080"
@@ -114,10 +114,6 @@ services:
   transform-core-aio:
     ports:
       - "8090:8090"
-
-  libriciel-transform-engine:
-    ports:
-      - "9010:8090"
 
   #solr6:
   #  #mem_limit: 1536M
