fix nginx image with correct tag format

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
 
 
   nginx:
-    image: registry.libriciel.fr:443/public/signature/ip-nginx:1.24.0-0
+    image: registry.libriciel.fr:443/public/signature/ip-nginx:1.24.0.0
     restart: unless-stopped
     tty: true
     deploy:
