--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ stages:
   - e2e-tests-strict
   - e2e-tests-tolerant
 
+
 variables:
   NIGHTLY:
     value: "FALSE"
@@ -38,71 +39,6 @@ variables:
   SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}"
   INIT_SCRIPT: "ip5-compose-dev.sh"
   DOCKER_COMPOSE_OVERRIDE_FILE_FOR_TAG: ""
-
-
-.e2e-test-config:
-  variables: &e2e-test-config
-    TARGETED_ENVIRONNEMENT_URL: ${E2E_TESTS_TARGET_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${E2E_TESTS_TARGET_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "TRUE"
-    OVERWRITE_ADMIN_PASSWORD: "TRUE"
-    OVERRIDE_DOCKER_COMPOSE_FILE: "docker-compose.override.dev.yml"
-    SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
-  environment: &e2e-test-environment
-    name: Charge/Tests e2e
-    url: https://${E2E_TESTS_TARGET_SERVER_URL}
-
-.acceptance-config:
-  variables: &acceptance-config
-    TARGETED_ENVIRONNEMENT_URL: ${ACCEPTANCE_TARGET_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${ACCEPTANCE_TARGET_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${ACCEPTANCE_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "FALSE"
-  environment: &acceptance-environment
-    name: Recette
-    url: https://${ACCEPTANCE_TARGET_SERVER_URL}
-
-.dev-config:
-  variables: &dev-config
-    TARGETED_ENVIRONNEMENT_URL: ${DEV_TARGET_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${DEV_TARGET_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${DEV_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "FALSE"
-    SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
-  environment: &dev-environment
-    name: Dev
-    url: https://${DEV_TARGET_SERVER_URL}
-
-.formation-config:
-  variables: &formation-config
-    TARGETED_ENVIRONNEMENT_URL: ${FORMATION_TARGET_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${FORMATION_TARGET_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${FORMATION_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "FALSE"
-  environment: &formation-environment
-    name: Formation
-    url: https://${FORMATION_TARGET_SERVER_URL}
-
-.test-config:
-  variables: &test-config
-    TARGETED_ENVIRONNEMENT_URL: ${TEST_TARGET_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${TEST_TARGET_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${TEST_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "FALSE"
-  environment: &test-environment
-    name: Test
-    url: https://${TEST_TARGET_SERVER_URL}
-
-.partner-config:
-  variables: &partner-config
-    TARGETED_ENVIRONNEMENT_URL: ${PARTNER_TARGET_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${PARTNER_TARGET_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${PARTNER_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "FALSE"
-  environment: &partner-environment
-    name: Partenaires
-    url: https://${PARTNER_TARGET_SERVER_URL}
 
 
 # <editor-fold desc="Package">
@@ -126,6 +62,7 @@ variables:
          cron.sh
     - tar cfz ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
 
+
 package_prod:
   stage: package
   only: [ tags ]
@@ -134,6 +71,7 @@ package_prod:
     name: ${PACKAGE_NAME}
     paths:
       - ${PACKAGE_NAME_WITH_EXTENSION}
+
 
 package:
   stage: package
@@ -146,9 +84,12 @@ package:
     # When https://gitlab.com/gitlab-org/gitlab-runner/-/issues/6412 is solved, package and package_prod should be merged
     expire_in: 30 days
 
+
 # </editor-fold desc="Package">
 
+
 # <editor-fold desc="Publish">
+
 
 publish:
   stage: publish
@@ -171,9 +112,12 @@ publish:
     - echo "Publishing ${PACKAGE_NAME_WITH_EXTENSION} to https://${NEXUS_HOST}/repository/${NEXUS_FINAL_PATH}/${PACKAGE_NAME_WITH_EXTENSION}"
     - curl -v -u ${REGISTRY_CONTAINER_USER}:${REGISTRY_CONTAINER_PASSWORD} --upload-file ${PACKAGE_NAME_WITH_EXTENSION} https://${NEXUS_HOST}/repository/${NEXUS_FINAL_PATH}/${PACKAGE_NAME_WITH_EXTENSION}
 
+
 # </editor-fold desc="Publish">
 
+
 # <editor-fold desc="Deploy">
+
 
 .preparing-ssh: &preparing-ssh
   - echo -e "🕵🏽 \e[46mPreparing ssh agent\e[0m 🕵🏽"
@@ -182,6 +126,7 @@ publish:
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
   - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+
 
 .copying-deployment-files: &copying-deployment-files
   - echo -e "📤 \e[46mCopying and extracting ${PACKAGE_NAME_WITH_EXTENSION}, ${INIT_SCRIPT} and ${OVERRIDE_DOCKER_COMPOSE_FILE} to ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_DIST_PATH}/\e[0m 📤"
@@ -196,6 +141,7 @@ publish:
   - ${APPLY_COMMAND} "ln -s --relative ${SERVER_DIST_PATH} ${SERVER_SIMLINK_PATH}"
   - if [[ ! -z ${OVERRIDE_DOCKER_COMPOSE_FILE} ]]; then scp ./${OVERRIDE_DOCKER_COMPOSE_FILE} ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_CURRENT_PATH}/docker-compose.override.yml; fi
 
+
 .deploying-app: &deploying-app
   - echo -e "🚀 \e[46mDeploying application using ${OVERRIDE_DOCKER_COMPOSE_FILE}\e[0m 🚀"
   - if [[ ${FORCE_RESET_DATA} == "TRUE" && ${RESET_DATA} == "FALSE" ]]; then echo -e "🧹⚠️ \e[41mData will be reset\e[0m ⚠️🧹"; fi
@@ -208,6 +154,7 @@ publish:
   - echo -e "⏳️ \e[46mWaiting for the application to be up\e[0m ⌛️️"
   - x=1; while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' https://${TARGETED_ENVIRONNEMENT_URL}/api/actuator/info)" != "200" && $x -le 60 ]]; do sleep 5; echo ⌛️️ $(( x++ )) ⏳; done || false
   - if [[ "$(curl -s -o /dev/null -w ''%{http_code}'' https://${TARGETED_ENVIRONNEMENT_URL}/api/actuator/info)" != "200" ]]; then echo -e "❤️‍🩹❤️‍🩹❤️‍🩹 \e[41mApplication not started\e[0m ❤️‍🩹❤️‍🩹❤️‍🩹"; exit 1; fi
+
 
 .deploy-job:
   variables:
@@ -225,6 +172,7 @@ publish:
     - *deploying-app
     - echo -e "🎉🎉🎉 \e[42m${CI_COMMIT_REF_NAME} successfully deployed on ${TARGETED_ENVIRONNEMENT_URL}\e[0m 🎉🎉🎉"
 
+
 strict-e2e-tests-deploy:
   extends: [ .deploy-job ]
   stage: deploy
@@ -241,30 +189,18 @@ strict-e2e-tests-deploy:
         OVERRIDE_DOCKER_COMPOSE_FILE: ${DOCKER_COMPOSE_OVERRIDE_FILE_FOR_TAG}
     - when: manual
   allow_failure: false
-  variables: *e2e-test-config
-  environment: *e2e-test-environment
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: charge.iparapheurubu22-5-0.recette.libriciel.net
+    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
+    SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "TRUE"
+    OVERWRITE_ADMIN_PASSWORD: "TRUE"
+    OVERRIDE_DOCKER_COMPOSE_FILE: "docker-compose.override.dev.yml"
+    SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
+  environment:
+    name: Charge/Tests e2e
+    url: https://charge.iparapheurubu22-5-0.recette.libriciel.net
 
-#tolerant-e2e-tests-deploy:
-#  extends: [ .deploy-job ]
-#  stage: deploy-tolerant-tests
-#  rules:
-#    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
-#      when: never
-#    - if: $NIGHTLY == "TRUE"
-#      when: manual
-#    - if: $CI_COMMIT_BRANCH == 'develop'
-#      when: manual
-#    - when: manual
-#  needs:
-#    #    must repeat package here because extends overwrites instead of merge properties
-#    - job: package
-#      optional: true
-#    - job: package_prod
-#      optional: true
-#    - strict-e2e-tests-test
-#  allow_failure: false
-#  variables: *e2e-test-config
-#  environment: *e2e-test-environment
 
 acceptance-deploy:
   extends: [ .deploy-job ]
@@ -275,8 +211,15 @@ acceptance-deploy:
     - if: $CI_COMMIT_TAG != null
       when: always
     - when: manual
-  variables: *acceptance-config
-  environment: *acceptance-environment
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: iparapheurubu22-5-0.recette.libriciel.net
+    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
+    SSH_PRIVATE_KEY_B64: ${ACCEPTANCE_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "FALSE"
+  environment:
+    name: Recette
+    url: https://iparapheurubu22-5-0.recette.libriciel.net
+
 
 dev-deploy:
   extends: [ .deploy-job ]
@@ -287,8 +230,16 @@ dev-deploy:
     - if: $NIGHTLY == "TRUE"
       when: always
     - when: manual
-  variables: *dev-config
-  environment: *dev-environment
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: iparapheur-5-0.dev.libriciel.net
+    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
+    SSH_PRIVATE_KEY_B64: ${DEV_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "FALSE"
+    SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
+  environment:
+    name: Dev
+    url: https://iparapheur-5-0.dev.libriciel.net
+
 
 formation-deploy:
   extends: [ .deploy-job ]
@@ -299,8 +250,15 @@ formation-deploy:
     - if: $CI_COMMIT_TAG != null
       when: manual
     - when: manual
-  variables: *formation-config
-  environment: *formation-environment
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: iparapheur.formation.libriciel.fr
+    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
+    SSH_PRIVATE_KEY_B64: ${FORMATION_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "FALSE"
+  environment:
+    name: Formation
+    url: https://iparapheur.formation.libriciel.fr
+
 
 test-deploy:
   extends: [ .deploy-job ]
@@ -311,8 +269,15 @@ test-deploy:
     - if: $CI_COMMIT_TAG != null
       when: manual
     - when: manual
-  variables: *test-config
-  environment: *test-environment
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: iparapheur-5-0.test.libriciel.net
+    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
+    SSH_PRIVATE_KEY_B64: ${TEST_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "FALSE"
+  environment:
+    name: Test
+    url: https://iparapheur-5-0.test.libriciel.net
+
 
 partner-deploy:
   extends: [ .deploy-job ]
@@ -323,12 +288,21 @@ partner-deploy:
     - if: $CI_COMMIT_TAG != null
       when: manual
     - when: manual
-  variables: *partner-config
-  environment: *partner-environment
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: iparapheur-5-0.partenaire.libriciel.fr
+    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
+    SSH_PRIVATE_KEY_B64: ${PARTNER_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "FALSE"
+  environment:
+    name: Partenaires
+    url: https://iparapheur-5-0.partenaire.libriciel.fr
+
 
 # </editor-fold desc="Deploy">
 
+
 # <editor-fold desc="E2e tests">
+
 
 .e2e-tests:
   image: markhobson/maven-chrome:jdk-11
@@ -351,6 +325,7 @@ partner-deploy:
       - build/karate-reports
       - build/karate-tests-fixme-ip-tag.txt
 
+
 setup-e2e-tests:
   extends: [ .e2e-tests ]
   stage: e2e-tests-setup
@@ -361,6 +336,7 @@ setup-e2e-tests:
     - job: strict-e2e-tests-deploy
       optional: true
   allow_failure: false
+
 
 strict-e2e-tests:
   extends: [ .e2e-tests ]
@@ -375,6 +351,7 @@ strict-e2e-tests:
   parallel:
     matrix:
       - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
+
 
 tolerant-e2e-tests:
   extends: [ .e2e-tests ]
@@ -391,5 +368,6 @@ tolerant-e2e-tests:
   parallel:
     matrix:
       - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
+
 
 # </editor-fold desc="E2e tests">
