--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,12 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
+include:
+  - project: "libriciel/integration-continue/templates"
+    ref: deploy-on-local-servers
+    file: 'jobs/update-software-on-server/update-software-on-server.yml'
+
+
 stages:
   - package
   - publish
@@ -213,7 +219,7 @@ acceptance-deploy:
 
 
 dev-deploy:
-  extends: [ .deploy-job ]
+  extends: [ .update-software-on-server ]
   stage: deploy
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
@@ -223,9 +229,8 @@ dev-deploy:
     - when: manual
   variables:
     TARGETED_ENVIRONNEMENT_URL: iparapheur-5-0.dev.libriciel.net
-    TARGETED_ENVIRONNEMENT_USER: gitlab-ci
     SSH_PRIVATE_KEY_B64: ${DEV_SSH_PRIVATE_KEY_B64}
-    RESET_DATA: "FALSE"
+    TARGETED_ACTUATOR_SUB_PATH: /api/actuator/info
     SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
   environment:
     name: Dev
