Use some anchor on global variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,6 @@ stages:
 
 
 variables:
-  TARGETED_SOFTWARE: iparapheur
-  TARGETED_ACTUATOR_SUB_PATH: /api/actuator/info
   NIGHTLY:
     value: "FALSE"
     description: "If set to TRUE, will start the nightly jobs"
@@ -121,6 +119,11 @@ publish:
 
 
 # <editor-fold desc="Deploy">
+
+
+.update-software-on-server-global-variables: &update-software-on-server-global-variables
+  TARGETED_SOFTWARE: iparapheur
+  TARGETED_ACTUATOR_SUB_PATH: /api/actuator/info
 
 
 .deploy-job:
@@ -227,6 +230,7 @@ dev-deploy:
       when: always
     - when: manual
   variables:
+    <<: *update-software-on-server-global-variables
     TARGETED_ENVIRONNEMENT_URL: iparapheur-5-0.dev.libriciel.net
     SSH_PRIVATE_KEY_B64: ${DEV_SSH_PRIVATE_KEY_B64}
     SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
