Use some shell command runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -206,6 +206,7 @@ acceptance-deploy:
 dev-deploy:
   extends: [ .update-software-on-server ]
   needs: [ package_tar_gz ]
+  tags: [ runner-signature-shell ]
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
@@ -244,6 +245,7 @@ formation-deploy:
 test-deploy:
   extends: [ .update-software-on-server ]
   needs: [ package_tar_gz ]
+  tags: [ runner-signature-shell ]
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
