--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
 
 
   nginx:
-    image: registry.libriciel.fr:443/public/signature/ip-nginx:1.24.0.1
+    image: registry.libriciel.fr:443/public/signature/ip-nginx:1.24.0.2
     restart: unless-stopped
     tty: true
     deploy:
@@ -60,7 +60,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.7.2
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.7.3
     restart: unless-stopped
     tty: true
     deploy:
@@ -138,7 +138,7 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.6.9
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.6.10
     restart: unless-stopped
     tty: true
     deploy:
@@ -167,6 +167,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
 
 
   pes-viewer:
@@ -238,7 +240,7 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.5.3
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.5.4
     restart: unless-stopped
     tty: true
     deploy:
