Standardize the dev overriding files

--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -96,13 +96,19 @@ services:
 
 
   alfresco:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco:add-custom-engine-image
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco:develop
     ports:
       - "9009:8080"
 
 
   transform-core-aio:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
+    # ports:
+    #   - "8090:8090"
+
+
+  libriciel-engine-extractors:
+    image: registry.libriciel.fr:443/public/signature/ip-alfresco-transform-extractors:develop
     ports:
       - "8090:8090"
 
