--- a/.env.dist
+++ b/.env.dist
@@ -105,14 +105,14 @@ GDPR_DECLARING_ENTITY_DPO_MAIL=
 GDPR_DECLARING_ENTITY_RESPONSIBLE_NAME=
 GDPR_DECLARING_ENTITY_RESPONSIBLE_TITLE=
 
-GDPR_HOSTING_ENTITY_NAME=
-GDPR_HOSTING_ENTITY_ADDRESS=
-GDPR_HOSTING_ENTITY_SIRET=
+GDPR_HOSTING_ENTITY_NAME="${GDPR_DECLARING_ENTITY_NAME}"
+GDPR_HOSTING_ENTITY_ADDRESS="${GDPR_DECLARING_ENTITY_ADDRESS}"
+GDPR_HOSTING_ENTITY_SIRET="${GDPR_DECLARING_ENTITY_SIRET}"
 GDPR_HOSTING_ENTITY_COMMENT=
 
-GDPR_MAINTENANCE_ENTITY_NAME=
-GDPR_MAINTENANCE_ENTITY_ADDRESS=
-GDPR_MAINTENANCE_ENTITY_SIRET=
+GDPR_MAINTENANCE_ENTITY_NAME="${GDPR_HOSTING_ENTITY_NAME}"
+GDPR_MAINTENANCE_ENTITY_ADDRESS="${GDPR_HOSTING_ENTITY_ADDRESS}"
+GDPR_MAINTENANCE_ENTITY_SIRET="${GDPR_HOSTING_ENTITY_SIRET}"
 
 # Only needed if IPNG is to be activated
 # IPNG_HOST=<domain of IPNG nodes eg ipng.libriciel.fr>
