--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -102,7 +102,7 @@ services:
 
 
   transform-core-aio:
-    # image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
     # ports:
     #   - "8090:8090"
 
